// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test case for Label component should be able to render the Label component for black color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  color: #000;
  font-weight: normal;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="black"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component for card-bg color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  color: #F8F8FA;
  font-weight: normal;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="card-bg"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component for dark color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  color: #2C2E33;
  font-weight: normal;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="dark"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component for disable color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  color: #747A88;
  font-weight: normal;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="disable"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component for primary color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  color: #7E7EB8;
  font-weight: normal;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="primary"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component for transparent color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  color: transparent;
  font-weight: normal;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="transparent"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component for white color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  color: #fff;
  font-weight: normal;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="white"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, bold weight, black color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: black;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, bold weight, card-bg color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: card-bg;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, bold weight, dark color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: dark;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, bold weight, disable color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: disable;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, bold weight, primary color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: primary;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, bold weight, transparent color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: transparent;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, bold weight, white color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: white;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, normal weight, black color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: black;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, normal weight, card-bg color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: card-bg;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, normal weight, dark color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: dark;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, normal weight, disable color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: disable;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, normal weight, primary color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: primary;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, normal weight, transparent color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: transparent;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with extra-large size, normal weight, white color and match with the snapshot 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: white;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, bold weight, black color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: black;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, bold weight, card-bg color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: card-bg;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, bold weight, dark color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: dark;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, bold weight, disable color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: disable;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, bold weight, primary color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: primary;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, bold weight, transparent color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: transparent;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, bold weight, white color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: white;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, normal weight, black color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: black;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, normal weight, card-bg color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: card-bg;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, normal weight, dark color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: dark;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, normal weight, disable color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: disable;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, normal weight, primary color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: primary;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, normal weight, transparent color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: transparent;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with large size, normal weight, white color and match with the snapshot 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: white;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, bold weight, black color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: black;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, bold weight, card-bg color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: card-bg;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, bold weight, dark color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: dark;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, bold weight, disable color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: disable;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, bold weight, primary color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: primary;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, bold weight, transparent color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: transparent;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, bold weight, white color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: white;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, normal weight, black color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: black;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, normal weight, card-bg color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: card-bg;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, normal weight, dark color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: dark;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, normal weight, disable color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: disable;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, normal weight, primary color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: primary;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, normal weight, transparent color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: transparent;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with medium size, normal weight, white color and match with the snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: white;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, bold weight, black color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: black;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, bold weight, card-bg color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: card-bg;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, bold weight, dark color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: dark;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, bold weight, disable color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: disable;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, bold weight, primary color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: primary;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, bold weight, transparent color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: transparent;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, bold weight, white color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: white;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="bold"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, normal weight, black color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: black;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, normal weight, card-bg color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: card-bg;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, normal weight, dark color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: dark;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, normal weight, disable color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: disable;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, normal weight, primary color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: primary;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, normal weight, transparent color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: transparent;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;

exports[`Test case for Label component should be able to render the Label component with small size, normal weight, white color and match with the snapshot 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: white;
  margin: unset;
  padding: unset;
  cursor: inherit;
}

<div>
  <label
    class="c0"
    color="normal"
  >
    unit test
  </label>
</div>
`;
